minor changes for implementing jwt